--- a/src/pages/login/login.css
+++ b/src/pages/login/login.css
@@ -5,7 +5,7 @@
     box-sizing: border-box;
 }
 
-.container{
+.container_login{
     display: flex;
     justify-content: center;
     align-items: center;
