--- a/src/components/header/header.css
+++ b/src/components/header/header.css
@@ -1,7 +1,7 @@
 * {
     margin: 0;
     padding: 0;
-    font-family: Helvetica;
+    font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;;
     box-sizing: border-box;
 }
 
@@ -39,6 +39,7 @@ nav{
     margin: 5% 0% 5% 0%;
     display: flex;
     align-items: center;
+    font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
 }
 
 .link{
